# tk-draft-pdf-tool

./: .gitignore  README.md  main.py  pyproject.toml  run.bat
pdf_tool/: page_number.py  processor.py  utils.py
