[project]
name = "pdf-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "k-rea",email = "70045038+k-rea@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pypdf (>=5.9.0,<6.0.0)",
    "reportlab (>=4.4.3,<5.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
